fixed mobile donate and sell boxes on mobile

--- a/styles/style.css
+++ b/styles/style.css
@@ -383,7 +383,7 @@ input[type='range']:focus::-ms-fill-upper {
   }
 
   .ds-result-box {
-    margin: 10px;
+    margin: 15px;
   }
 
 }
